--- a/7-31/zuoye2.html
+++ b/7-31/zuoye2.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="zuoye2.css">
 </head>
 <body>
+    <div class="index">
+        <img src="logo.jpg" alt="" style="width: 50px; height: 50px; margin-left: 50px; " >
+    </div>
     <div>
     <div class="index_01">
          <p id="p_01">加入我们 UPCOMING</p>
+      
          <hr>
          <input id="i_01" type="text" value="常用邮箱/手机登录"><br>
          <input id="i_01" type="password" value=""><br>
@@ -25,5 +29,6 @@
       <p id="p_04">you must believe,the best does no come.</p>
     </div>
 </div>
+
 </body>
 </html>
